# django-graph

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml  re_deploy_docker.sh  run_backend.sh
back-end/: Dockerfile  README.md  manage.py  pyproject.toml  setup.py
back-end/movies/: settings.py  urls.py
back-end/movies/api/: schema.py
back-end/movies/api/migrations/: 0003_alter_director_id_alter_movie_id.py
django-graph/: README.md  manage.py  requirements.txt  setup.py
django-graph/movies/: settings.py  urls.py
django-graph/movies/api/: apps.py
front-end/: Dockerfile  package-lock.json  package.json
front-end/public/: index.html
front-end/src/: App.js  apolloClient.js  index.js  movies.js
front-end/src/components/: MovieForm.js
graph-react/: README.md  package-lock.json  package.json
graph-react/src/: App.js
k8s/: README.md  deployment.yaml  service.yaml
